[gd_scene load_steps=8 format=2]

[ext_resource path="res://scenes/cell.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/grid.gd" type="Script" id=2]
[ext_resource path="res://assets/fonts/diest64.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/sprites/tile.png" type="Texture" id=4]
[ext_resource path="res://scenes/shake.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=1]
size = 32
outline_size = 5
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_char = -7
font_data = ExtResource( 3 )

[sub_resource type="TileSet" id=2]
0/name = "tile.png 0"
0/texture = ExtResource( 4 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 32, 32 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[node name="prototype" type="Node2D"]

[node name="hud" type="CanvasLayer" parent="."]

[node name="top" type="HBoxContainer" parent="hud"]
anchor_right = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="margin_center" type="MarginContainer" parent="hud/top"]
margin_right = 99.0
margin_bottom = 64.0
custom_constants/margin_right = 16
custom_constants/margin_top = 20
custom_constants/margin_left = 16
custom_constants/margin_bottom = 16
__meta__ = {
"_edit_use_anchors_": false
}

[node name="time" type="Label" parent="hud/top/margin_center"]
margin_left = 16.0
margin_top = 20.0
margin_right = 83.0
margin_bottom = 48.0
size_flags_horizontal = 8
custom_fonts/font = SubResource( 1 )
text = "0:00"

[node name="margin_right" type="MarginContainer" parent="hud/top"]
margin_left = 103.0
margin_right = 270.0
margin_bottom = 64.0
size_flags_horizontal = 11
custom_constants/margin_right = 16
custom_constants/margin_top = 20
custom_constants/margin_left = 16
custom_constants/margin_bottom = 16
__meta__ = {
"_edit_use_anchors_": false
}

[node name="score" type="Label" parent="hud/top/margin_right"]
margin_left = 129.0
margin_top = 20.0
margin_right = 151.0
margin_bottom = 48.0
size_flags_horizontal = 8
custom_fonts/font = SubResource( 1 )
text = "0"

[node name="background" type="TileMap" parent="."]
visible = false
position = Vector2( 25.5195, 44.4415 )
scale = Vector2( 2.25, 2.25 )
tile_set = SubResource( 2 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( -65537, 0, 0, -131072, 0, 0, -131071, 0, 0, -131070, 0, 0, -131069, 0, 0, -131068, 0, 0, -131067, 0, 0, -131066, 0, 0, -131065, 0, 0, -131064, 0, 0, -1, 0, 0, -65536, 0, 0, -65535, 0, 0, -65534, 0, 0, -65533, 0, 0, -65532, 0, 0, -65531, 0, 0, -65530, 0, 0, -65529, 0, 0, -65528, 0, 0, 65535, 0, 0, 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0, 8, 0, 0, 131071, 0, 0, 65536, 0, 0, 65537, 0, 0, 65538, 0, 0, 65539, 0, 0, 65540, 0, 0, 65541, 0, 0, 65542, 0, 0, 65543, 0, 0, 65544, 0, 0, 196607, 0, 0, 131072, 0, 0, 131073, 0, 0, 131074, 0, 0, 131075, 0, 0, 131076, 0, 0, 131077, 0, 0, 131078, 0, 0, 131079, 0, 0, 131080, 0, 0, 262143, 0, 0, 196608, 0, 0, 196609, 0, 0, 196610, 0, 0, 196611, 0, 0, 196612, 0, 0, 196613, 0, 0, 196614, 0, 0, 196615, 0, 0, 196616, 0, 0, 327679, 0, 0, 262144, 0, 0, 262145, 0, 0, 262146, 0, 0, 262147, 0, 0, 262148, 0, 0, 262149, 0, 0, 262150, 0, 0, 262151, 0, 0, 262152, 0, 0, 393215, 0, 0, 327680, 0, 0, 327681, 0, 0, 327682, 0, 0, 327683, 0, 0, 327684, 0, 0, 327685, 0, 0, 327686, 0, 0, 327687, 0, 0, 327688, 0, 0, 458751, 0, 0, 393216, 0, 0, 393217, 0, 0, 393218, 0, 0, 393219, 0, 0, 393220, 0, 0, 393221, 0, 0, 393222, 0, 0, 393223, 0, 0, 393224, 0, 0, 524287, 0, 0, 458752, 0, 0, 458753, 0, 0, 458754, 0, 0, 458755, 0, 0, 458756, 0, 0, 458757, 0, 0, 458758, 0, 0, 458759, 0, 0, 458760, 0, 0, 589823, 0, 0, 524288, 0, 0, 524289, 0, 0, 524290, 0, 0, 524291, 0, 0, 524292, 0, 0, 524293, 0, 0, 524294, 0, 0, 524295, 0, 0, 524296, 0, 0, 655359, 0, 0, 589824, 0, 0, 589825, 0, 0, 589826, 0, 0, 589827, 0, 0, 589828, 0, 0, 589829, 0, 0, 589830, 0, 0, 589831, 0, 0, 589832, 0, 0, 720895, 0, 0, 655360, 0, 0, 655361, 0, 0, 655362, 0, 0, 655363, 0, 0, 655364, 0, 0, 655365, 0, 0, 655366, 0, 0, 655367, 0, 0, 655368, 0, 0, 786431, 0, 0, 720896, 0, 0, 720897, 0, 0, 720898, 0, 0, 720899, 0, 0, 720900, 0, 0, 720901, 0, 0, 720902, 0, 0, 720903, 0, 0, 720904, 0, 0, 851967, 0, 0, 786432, 0, 0, 786433, 0, 0, 786434, 0, 0, 786435, 0, 0, 786436, 0, 0, 786437, 0, 0, 786438, 0, 0, 786439, 0, 0, 786440, 0, 0, 917503, 0, 0, 851968, 0, 0, 851969, 0, 0, 851970, 0, 0, 851971, 0, 0, 851972, 0, 0, 851973, 0, 0, 851974, 0, 0, 851975, 0, 0, 851976, 0, 0, 983039, 0, 0, 917504, 0, 0, 917505, 0, 0, 917506, 0, 0, 917507, 0, 0, 917508, 0, 0, 917509, 0, 0, 917510, 0, 0, 917511, 0, 0, 917512, 0, 0, 1048575, 0, 0, 983040, 0, 0, 983041, 0, 0, 983042, 0, 0, 983043, 0, 0, 983044, 0, 0, 983045, 0, 0, 983046, 0, 0, 983047, 0, 0, 983048, 0, 0, 1114111, 0, 0, 1048576, 0, 0, 1048577, 0, 0, 1048578, 0, 0, 1048579, 0, 0, 1048580, 0, 0, 1048581, 0, 0, 1048582, 0, 0, 1048583, 0, 0, 1048584, 0, 0, 1179647, 0, 0, 1114112, 0, 0, 1114113, 0, 0, 1114114, 0, 0, 1114115, 0, 0, 1114116, 0, 0, 1114117, 0, 0, 1114118, 0, 0, 1114119, 0, 0, 1114120, 0, 0, 1245183, 0, 0, 1179648, 0, 0, 1179649, 0, 0, 1179650, 0, 0, 1179651, 0, 0, 1179652, 0, 0, 1179653, 0, 0, 1179654, 0, 0, 1179655, 0, 0, 1179656, 0, 0, 1310719, 0, 0, 1245184, 0, 0, 1245185, 0, 0, 1245186, 0, 0, 1245187, 0, 0, 1245188, 0, 0, 1245189, 0, 0, 1245190, 0, 0, 1245191, 0, 0, 1245192, 0, 0 )

[node name="grid" type="Node2D" parent="."]
position = Vector2( 0, 112 )
script = ExtResource( 2 )
rows = 10
cols = 6
cell_scene = ExtResource( 1 )
_neighbor_alpha = 1.0
_score_path = NodePath("../hud/top/margin_right/score")
_game_time = NodePath("../hud/top/margin_center/time")

[node name="destroy_timer" type="Timer" parent="grid"]
wait_time = 0.2
one_shot = true

[node name="collapse_timer" type="Timer" parent="grid"]
wait_time = 0.2
one_shot = true

[node name="fill_timer" type="Timer" parent="grid"]
wait_time = 0.3
one_shot = true

[node name="swap_timer" type="Timer" parent="grid"]
wait_time = 0.3
one_shot = true

[node name="score_tween" type="Tween" parent="grid"]

[node name="game_timer" type="Timer" parent="grid"]
wait_time = 75.0
one_shot = true
autostart = true

[node name="camera" type="Camera2D" parent="."]
offset = Vector2( 135, 300 )
current = true
script = ExtResource( 5 )

[node name="_shake_timer" type="Timer" parent="camera"]

[node name="_shake_tween" type="Tween" parent="camera"]

[connection signal="timeout" from="grid/destroy_timer" to="grid" method="_on_destroy_timer_finished"]
[connection signal="timeout" from="grid/collapse_timer" to="grid" method="_move_peices_down"]
[connection signal="timeout" from="grid/fill_timer" to="grid" method="_fill_cells"]
[connection signal="timeout" from="grid/swap_timer" to="grid" method="_swap_back"]
[connection signal="timeout" from="grid/game_timer" to="grid" method="_game_time_ended"]
[connection signal="timeout" from="camera/_shake_timer" to="camera" method="_timer_end"]
